# cortex

./: .gitignore  CaptureSafari.swift  README.md  WindowMonitor.swift  mac_screenshot_server.py  mcp_server.py  openrouter.py  requirements.txt  setup_usb_forwarding.sh  test_ollama.swift  wdatest.py
androidApp/: settings.gradle.kts
androidApp/app/: build.gradle.kts
androidApp/gradle/wrapper/: gradle-wrapper.properties
iosApp/: Podfile
iosApp/cortex/: AnalysisService.swift  BackgroundContextManager.swift  ContentView.swift  GoalService.swift  Info.plist  Item.swift  NetworkService.swift  cortexApp.swift
iosApp/cortex.xcodeproj/: project.pbxproj
iosApp/cortexTests/: cortexTests.swift
iosApp/cortexUITests/: cortexUITests.swift  cortexUITestsLaunchTests.swift
macosApp/cortex/: .gitignore  CORTEX_CODEBASE_CONTEXT.md
macosApp/cortex/cortex/: AccountabilityGoals.swift  ContentView.swift  Info.plist  Item.swift  cortex.entitlements  cortexApp.swift
macosApp/cortex/cortex.xcodeproj/: project.pbxproj
macosApp/cortex/cortexTests/: cortexTests.swift
macosApp/cortex/cortexUITests/: cortexUITests.swift  cortexUITestsLaunchTests.swift
mcp/: Package.swift
mcp/Sources/: bridge.swift  main.swift
tauri/: README.md  index.html  package-lock.json  package.json  spec.md
tauri/browser-extension/: background.js  content.js  manifest.json  popup.html  popup.js
tauri/src/: App.tsx  styles.css  types.ts
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: database.rs  main.rs  websocket_server.rs
tauri/src/components/: DebugLogs.tsx  (+3 more)
(+24 files in other folders)
